# iec61131-library

./: .gitignore  CMakeLists.txt
inc/: LOCATED_VARIABLES.h  coonix.h  glueVars.h  iec_types.h  lua_bit_array.h  lua_main.h  lua_timer.h  lua_value_operation.h
lua/: init.lua  run.lua
src/: coonix.c  glueVars.c  lua.c  lua_bit_array.c  lua_timer.c  lua_value_operation.c  main.c
